--- a/app/build.gradle
+++ b/app/build.gradle
@@ -41,8 +41,11 @@ dependencies {
     implementation "org.jetbrains.kotlinx:kotlinx-serialization-runtime:0.9.1"
     implementation 'com.google.code.gson:gson:2.8.6'
     implementation "android.arch.lifecycle:extensions:1.1.1"
-    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.3.8'
+    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.3.9'
     implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:2.2.0"
     implementation 'androidx.browser:browser:1.2.0'
     implementation 'com.squareup.picasso:picasso:2.71828'
+    implementation 'com.mikhaellopez:circularimageview:4.2.0'
+
+
 }
