--- a/app/build.gradle
+++ b/app/build.gradle
@@ -47,5 +47,7 @@ dependencies {
     implementation 'com.squareup.picasso:picasso:2.71828'
     implementation 'com.mikhaellopez:circularimageview:4.2.0'
 
+    implementation "com.hanks:htextview-base:0.1.6"
+    implementation "com.hanks:htextview-typer:0.1.6"
 
 }
